# rb_theron_common

./: CHANGELOG.md  README.md
rb_theron_command_manager/: CMakeLists.txt  package.xml  setup.py
rb_theron_command_manager/config/: complex_command_sequences.yaml  handlers.yaml  simple_command_sequences.yaml
rb_theron_command_manager/launch/: robot_command_bringup.launch
rb_theron_command_manager/src/rb_theron_command_manager/handlers/procedures/: goto_tag_procedure_interface.py
rb_theron_common/: CMakeLists.txt  package.xml
rb_theron_common_private/: CMakeLists.txt  package.xml
rb_theron_control/: CMakeLists.txt  package.xml
rb_theron_control/config/: rb_theron_control.yaml  twist_mux.yaml
rb_theron_control/config/simulation/: rb_theron_diffdrive_control.yaml
rb_theron_control/launch/: rb_theron_control.launch
rb_theron_description/: CHANGELOG.md  CMakeLists.txt  package.xml
rb_theron_description/launch/: default.launch.py  differential.launch  rb_theron_state.launch  rbogie.launch  view_model.launch.py
rb_theron_description/meshes/bases/: mcq_prototype_bottom_cover.dae  mcq_prototype_bottom_cover.stl  mcq_prototype_chassis.dae  rb_theron_chassis.stl  theron_base.dae  theron_base.stl  theron_base_omni.stl
rb_theron_description/meshes/elevator/: rb_theron_elevator_base.STL  rb_theron_elevator_base.dae  rb_theron_elevator_platform.STL  rb_theron_elevator_platform.dae
rb_theron_description/meshes/pole/: mcq_pole.stl  simple_pole.dae  simple_pole.stl
rb_theron_description/meshes/rocker/: mcq_prototype_rocker_l.dae  mcq_prototype_rocker_l.stl  mcq_prototype_rocker_r.stl  rb_theron_rocker_r.dae
rb_theron_description/meshes/wheels/: base_castor.dae  base_castor.stl  castor_wheel.stl  differential_traction_wheel.stl  mcq_prototype_traction_wheel.dae  mcq_prototype_traction_wheel.stl  omni_wheel.stl  rb_theron_base_castor.dae  rb_theron_base_castor.stl  rb_theron_castor_wheel.dae  rb_theron_castor_wheel.stl  rubber_wheel_zltech.stl
rb_theron_description/robots/: basic.urdf.xacro  default.urdf.xacro  dual_laser.urdf.xacro  rb_theron.urdf.xacro  rb_theron_base.urdf.xacro  rb_theron_base_omni.urdf.xacro  rb_theron_elevator.urdf.xacro  rb_theron_omni.urdf.xacro
rb_theron_description/robots/versions/: rb_theron_keonn.urdf  rb_theron_keonn.urdf.xacro  rb_theron_mcq.urdf  rb_theron_mcq.urdf.xacro
rb_theron_description/rviz/: test.rviz
rb_theron_description/urdf/: common.gazebo.xacro  inertia.urdf.xacro  ros2_control.urdf.xacro
rb_theron_description/urdf/bases/: base.gazebo.xacro  rb_theron_base_v4.urdf.xacro  rb_theron_omni_base.urdf.xacro  theron_base.urdf.xacro  theron_base_omni.urdf.xacro
rb_theron_description/urdf/elevator/: elevator.transmission.xacro  elevator.urdf.xacro
rb_theron_description/urdf/pole/: mcq_pole.urdf.xacro  simple_pole.urdf.xacro
rb_theron_description/urdf/rocker/: mcq_prototype_rocker.urdf.xacro  rb_theron_rocker.urdf.xacro
rb_theron_description/urdf/utils/: inertial.urdf.xacro
rb_theron_description/urdf/wheels/: castor.urdf.xacro  omni_wheel.gazebo.xacro  omni_wheel.transmission.xacro  omni_wheel.urdf.xacro  omni_wheel2.urdf.xacro  rubber_wheel.gazebo.xacro  rubber_wheel.transmission.xacro  rubber_wheel.urdf.xacro  rubber_wheel_125.urdf.xacro  rubber_wheel_140.urdf.xacro  rubber_wheel_150.urdf.xacro
rb_theron_localization/: CMakeLists.txt  package.xml
rb_theron_localization/config/: amcl.yaml  slam_params.yaml
rb_theron_localization/config/cartographer/: assets_writer_pcd.lua  assets_writer_ros_map.lua  localization_3d.lua  slam_3d.lua
rb_theron_localization/launch/: localization.launch.py  localization_3d_complete.launch  map_saver.launch  map_server.launch  map_server.launch.py  merge_laser.launch.py  rb_theron_localization_basic.launch  rb_theron_localization_odom.launch  rb_theron_localization_odom_6d.launch  slam.launch.py  slam_3d_complete.launch
rb_theron_localization/launch/cartographer/: assets_writer_pcd.launch  assets_writer_ros_map.launch  localization_3d.launch  offline_slam_3d.launch  online_slam_3d.launch
rb_theron_localization/maps/opil_factory/: map.pgm  map.yaml
rb_theron_localization/maps/willow_garage/: map.pgm  map.yaml
rb_theron_navigation/: CMakeLists.txt  package.xml
rb_theron_navigation/config/: costmap_common_params.yaml  costmap_common_params_straight.yaml  eband_local_planner_params.yaml  eband_straight_local_planner_params.yaml  global_costmap_params_map.yaml  global_costmap_params_map_straight.yaml  local_costmap_params.yaml  local_costmap_params_straight.yaml  move_base_params.yaml  nav.yaml  purepursuit_local_planner_params.yaml  scan_filter.yaml  scan_filter_shadow.yaml  teb_local_planner_params.yaml  teb_local_planner_params_diff.yaml  teb_local_planner_params_omni.yaml
rb_theron_navigation/config_rviz/: move_base.rviz  move_base_local.rviz
rb_theron_navigation/launch/: default.launch.py  dual_move_base.launch  move_base.launch  move_base_eband.launch  move_base_straight.launch  move_base_straight_eband.launch  move_base_straight_purepursuit.launch  move_base_teb.launch  navigation_complete.launch  rb_theron_docking.launch  rgbd_to_laserscan.launch  scan_filter.launch
rb_theron_navigation_private/: CMakeLists.txt  package.xml
rb_theron_navigation_private/config/docking/: pp_docker.yaml
rb_theron_navigation_private/launch/: move.launch  navigation_complete.launch  rb_theron_docking.launch  safety_controller.launch
rb_theron_pad/: CMakeLists.txt  package.xml
rb_theron_pad/config/: ps4.yaml
rb_theron_pad/launch/: rb_theron_pad.launch
rb_theron_pad/src/: rb_theron_pad.cpp
rb_theron_perception/: CMakeLists.txt  package.xml
rb_theron_perception/config/laser/: sick_nanoscan_intensity_filter.yaml
rb_theron_perception/launch/: ar_locator.launch  perception_complete.launch  scan_to_cloud.launch
rb_theron_robot_local_control/: CMakeLists.txt  package.xml
rb_theron_robot_local_control/config/: localization.yaml  navigation.yaml  process_manager.yaml  robot_status.yaml
rb_theron_robot_local_control/launch/: marker_mapping.launch  robot_local_control.launch
(+3 files in other folders)
