<?xml version="1.0"?>
<package>
  <name>rb_theron_common</name>
  <version>0.0.0</version>
  <description>The rb_theron_common package. It contains rb_theron common packages used for robot control and for simulation</description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rb_theron_control</run_depend>

  <run_depend>rb_theron_description</run_depend>
  <run_depend>rb_theron_localization</run_depend>
  <run_depend>rb_theron_navigation</run_depend>
  <run_depend>rb_theron_pad</run_depend>
  <run_depend>rb_theron_perception</run_depend>
  <run_depend>rb_theron_robot_local_control</run_depend>

  <export><metapackage/></export>

</package>
