<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_common</name>
  <version>1.0.0</version>
  <description>
    The rb_theron_common package. It contains rb_theron common
    ackages used for robot control and for simulation.
  </description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb_theron_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb_theron_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb_theron_common/issues</url>

  <exec_depend>rb_theron_control</exec_depend>
  <exec_depend>rb_theron_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
