<?xml version="1.0"?>
<package>
  <name>rb_theron_control</name>
  <version>0.0.0</version>
  <description>The rb_theron_control package</description>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>

  <build_depend>twist_mux</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>twist_mux</run_depend>

</package>
