<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_description</name>
  <version>1.0.0</version>
  <description>
    The rb_theron_description package.
  </description>

  <maintainer email="robert@todo.todo">robert</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb_theron_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb_theron_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb_theron_common/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robotnik_sensors</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
