<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_localization</name>
  <version>1.0.0</version>
  <description>
    The rb_theron_localization package.
  </description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb_theron_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb_theron_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb_theron_common/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>rb_theron_description</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_localization_utils</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
