<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_localization</name>
  <version>1.0.0</version>
  <description>
    The rb_theron_localization package.
  </description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb_theron_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb_theron_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb_theron_common/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>ros_launch</exec_depend>
  <exec_depend>robotnik_common</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
</package>
