<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_navigation</name>
  <version>1.0.0</version>
  <description>
    This package configures the move_base stack and makes use of the gmapping
    and amcl algorithms to move the rb_theron robot.
  </description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rb_theron_navigation</url>
  <url type="repository">https://github.com/RobotnikAutomation/rb_theron_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rb_theron_common/issues</url>

  <author email="opencode@robotnik.es">Robotnik Automation</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_rotation_shim_controller</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>dwb_core</exec_depend>
  <exec_depend>dwb_plugins</exec_depend>
  <exec_depend>dwb_critics</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
