<?xml version="1.0"?>
<package>
  <name>rb_theron_navigation</name>
  <version>0.0.0</version>
  <description>
    This package configures the move_base stack and makes use of the gmapping and amcl algorithms to
    move the rb_theron robot
  </description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <author>Robotnik</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <run_depend>laser_filters</run_depend>

  <run_depend>move_base</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>spatio_temporal_voxel_layer</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>global_planner</run_depend>

</package>
