<?xml version="1.0"?>
<package>
  <name>rb_theron_pad</name>
  <version>0.0.0</version>
  <description>The rb_theron_pad package</description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>diagnostic_updater</run_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
